# VulkanTriangle

./: CMakeLists.txt
LinuxBuild/: CMakeCache.txt  Makefile  VulkanProgram  cmake_install.cmake  compile_commands.json
LinuxBuild/glfw3/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
LinuxBuild/glfw3/src/: Makefile  cmake_install.cmake
VulkanSDK/: vulkansdk
VulkanSDK/config/: vk_layer_settings.txt
VulkanSDK/source/DirectXShaderCompiler/utils/hct/: hctbuild.cmd  hctstart.cmd  hcttest.cmd  hcttestcmds.cmd
VulkanSDK/source/Vulkan-ExtensionLayer/scripts/utils/: utils.py
VulkanSDK/x86_64/etc/vulkan/explicit_layer.d/: VkLayer_api_dump.json  VkLayer_device_simulation.json  VkLayer_gfxreconstruct.json  VkLayer_khronos_synchronization2.json  VkLayer_khronos_validation.json  VkLayer_monitor.json  VkLayer_screenshot.json
VulkanSDK/x86_64/lib/: libspirv-cross-c-shared.so.0  libspirv-cross-c-shared.so.0.48.0
VulkanSDK/x86_64/lib/pkgconfig/: SPIRV-Tools-shared.pc  SPIRV-Tools.pc  shaderc.pc  shaderc_combined.pc  shaderc_static.pc  spirv-cross-c-shared.pc  vulkan.pc
VulkanSDK/x86_64/share/pkgconfig/: SPIRV-Headers.pc
src/: compile_shader.sh  main.cpp  tags
